--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.0"
   },
   "name": "register",
   "version": "1.0.0",
